logo changed and cleaned up border

--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
                 <div class="container">
                     <div class="navbar-header pull-left">
                         <a href="" class="navbar-brand">
-                            <span class="brand-logo"><img src="images/logo.png" alt=""/></span>
+                            <span class="brand-logo"><img src="images/noorilogo.png" alt=""/></span>
                         </a>
                     </div>
                     <div class="main-nav pull-right">
@@ -277,16 +277,16 @@
             <div class="row">
               <div class="col-sm-9">
                 <h2>INFO</h2>
-                <p>Address: 22 ST. SOUTH, NEW YORK, NY 10019</p>
-                <p>Phone: 212-333-4000</p>
-                <p>Email: simplestudio@office.com</p>
+                <p>UK Based Artist</p>
+                <!-- <p>Phone: 212-333-4000</p> -->
+                <p>Email: <a href="mailto:noorihafiz@hotmail.co.uk">noorihafiz@hotmail.co.uk</a></p>
               </div><!-- /col-sm-9 -->
             </div><!--/row-->
           </div><!-- /col-sm-6 -->
           <div class="col-md-3 col-sm-3 section-bg-color1">
             <div class="row">
               <div class="col-sm-9">
-              <h3>Copyright 2017</h3>
+              <h3>Copyright Naureen Hafeez</h3>
               <p class="pull-right"><a href=""><img src="images/twitter.png" alt=""/></a></p>
               <p class="pull-right icons-f"><a href=""><img src="images/facebook.png" alt=""/></a></p>
               </div><!-- /col-sm-9 -->
