--- a/projects.html
+++ b/projects.html
@@ -253,7 +253,7 @@
 
 
      <!-- Testimonials text-->
-	 <div class="inner-projects">
+	 <!-- <div class="inner-projects">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 pull-right wow fadeInUp animated">
@@ -263,7 +263,7 @@
 					</div>
 				</div>
 			</div>
-	 </div>
+	 </div> -->
      <!-- /Testimonials text -->
 
 
@@ -276,19 +276,20 @@
           <div class="col-md-6 col-sm6 section-bg-color">
             <div class="row">
               <div class="col-sm-9">
-                <h2>INFO</h2>
+                <!-- <h2>INFO</h2> -->
                 <p>UK Based Artist</p>
                 <!-- <p>Phone: 212-333-4000</p> -->
                 <p>Email: <a href="mailto:noorihafiz@hotmail.co.uk">noorihafiz@hotmail.co.uk</a></p>
+								<p>Copyright Naureen Hafeez</p>
               </div><!-- /col-sm-9 -->
             </div><!--/row-->
           </div><!-- /col-sm-6 -->
           <div class="col-md-3 col-sm-3 section-bg-color1">
             <div class="row">
               <div class="col-sm-9">
-              <h3>Copyright Naureen Hafeez</h3>
-              <p class="pull-right"><a href=""><img src="images/twitter.png" alt=""/></a></p>
-              <p class="pull-right icons-f"><a href=""><img src="images/facebook.png" alt=""/></a></p>
+              <!-- <h3>Copyright Naureen Hafeez</h3> -->
+              <!-- <p class="pull-right"><a href=""><img src="images/twitter.png" alt=""/></a></p> -->
+              <p class="pull-right icons-f"><a href="https://www.instagram.com/nori.arty/" target='_blank'><img src="images/instagram-icon.png" alt=""/></a></p>
               </div><!-- /col-sm-9 -->
             </div><!--/row-->
           </div><!-- /col-sm-3 -->
