added portfolio images

--- a/projects.html
+++ b/projects.html
@@ -55,9 +55,9 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 pull-right wow fadeInUp animated">
-						<h1 class="inner-heading"><span>Artist,lover,daughter,fish</span> Naureen Hafeeez
+						<h1 class="inner-heading"><span>UK based Artist,Illustrator & Poet</span> Naureen Hafeez
                          </h1>
-						<div class="text-inner">OUR PROJECTS</div>
+						<!-- <div class="text-inner">OUR PROJECTS</div> -->
 					</div>
 				</div>
 			</div>
@@ -79,13 +79,13 @@
              <div id="photos">
                   <div class="thumbs">
                    <figure class="effect-julia">
-                       <a href="images/image1.jpg">
-						<img src="images/image1.jpg" alt="img21"/>
+                       <a href="images/nooriimage1.jpg">
+						<img src="images/nooriimage1.jpg" alt="img21"/>
 						<figcaption>
-							<div>
+							<!-- <div>
 								<p>TRES SIMPLE </p>
 								<p>BRAND + PRINT</p>
-							</div>
+							</div> -->
 						</figcaption>
                         </a>
 					</figure>
@@ -93,28 +93,28 @@
                   <div class="thumbs">
                      <div class="block-project">
                     <figure class="effect-julia">
-                       <a href="images/image2.jpg">
-						<img src="images/image2.jpg" alt="img21"/>
-						<figcaption>
+                       <a href="images/nooriimage2.jpg">
+						<img src="images/nooriimage2.jpg" alt="img21"/>
+						<!-- <figcaption>
 							<div>
 								<p>SIMPLES</p>
 								<p>BRAND + PRINT + WEB</p>
 							</div>
-						</figcaption>
+						</figcaption> -->
                         </a>
 					</figure>
                     </div>
                   </div>
                   <div class="thumbs">
                     <figure class="effect-julia">
-                       <a href="images/image3.jpg">
-						<img src="images/image3.jpg" alt="img21"/>
-						<figcaption>
+                       <a href="images/nooriimage3.jpg">
+						<img src="images/nooriimage3.jpg" alt="img21"/>
+						<!-- <figcaption>
 							<div>
 								<p>MINIMALISM</p>
 								<p>BRAND + VIDEO</p>
 							</div>
-						</figcaption>
+						</figcaption> -->
                         </a>
 					</figure>
                   </div>
@@ -281,6 +281,7 @@
                 <!-- <p>Phone: 212-333-4000</p> -->
                 <p>Email: <a href="mailto:noorihafiz@hotmail.co.uk">noorihafiz@hotmail.co.uk</a></p>
 								<p>Copyright Naureen Hafeez</p>
+								<!-- <p class="pull-right icons-f"><a href="https://www.instagram.com/nori.arty/" target='_blank'><img src="images/instagram-icon.png" alt=""/></a></p> -->
               </div><!-- /col-sm-9 -->
             </div><!--/row-->
           </div><!-- /col-sm-6 -->
