--- a/projects.html
+++ b/projects.html
@@ -120,67 +120,67 @@
                   </div>
                  <div class="thumbs">
                      <figure class="effect-julia">
-                       <a href="images/image4.jpg">
-						<img src="images/image4.jpg" alt="img21"/>
-						<figcaption>
+                       <a href="images/nooriimage4.jpg">
+						<img src="images/nooriimage4.jpg" alt="img21"/>
+						<!-- <figcaption>
 							<div>
 								<p>SIMPLE </p>
 								<p>BRAND + WEB</p>
 							</div>
-						</figcaption>
+						</figcaption> -->
                         </a>
 					</figure>
                   </div>
                   <div class="thumbs">
                      <figure class="effect-julia">
-                       <a href="images/image5.jpg">
-						<img src="images/image5.jpg" alt="img21"/>
-						<figcaption>
+                       <a href="images/nooriimage5.jpg">
+						<img src="images/nooriimage5.jpg" alt="img21"/>
+						<!-- <figcaption>
 							<div>
 								<p>SIMPLE DECOR</p>
 								<p>BRAND + VIDEO</p>
 							</div>
-						</figcaption>
+						</figcaption> -->
                         </a>
 					</figure>
                   </div>
 
                   <div class="thumbs">
                     <figure class="effect-julia">
-                       <a href="images/image6.jpg">
-						<img src="images/image6.jpg" alt="img21"/>
-						<figcaption>
+                       <a href="images/nooriimage6.jpg">
+						<img src="images/nooriimage6.jpg" alt="img21"/>
+						<!-- <figcaption>
 							<div>
 								<p>SIMPLE STYLE</p>
 								<p>BRAND + PRINT + WEB</p>
 							</div>
-						</figcaption>
+						</figcaption> -->
                         </a>
 					</figure>
                   </div>
                     <div class="thumbs">
                     <figure class="effect-julia">
-                       <a href="images/image9.jpg">
-						<img src="images/image9.jpg" alt="img21"/>
-						<figcaption>
+                       <a href="images/nooriimage7.jpg">
+						<img src="images/nooriimage7.jpg" alt="img21"/>
+						<!-- <figcaption>
 							<div>
 								<p>SIMPLE STYLE</p>
 								<p>BRAND + PRINT + WEB</p>
 							</div>
-						</figcaption>
+						</figcaption> -->
                         </a>
 					</figure>
                   </div>
                   <div class="thumbs">
                     <figure class="effect-julia">
-                       <a href="images/photo6.jpg">
-						<img src="images/photo6.jpg" alt="img21"/>
-						<figcaption>
+                       <a href="images/nooriimage8.jpg">
+						<img src="images/nooriimage8.jpg" alt="img21"/>
+						<!-- <figcaption>
 							<div>
 								<p>HEY SIMPLE </p>
 								<p>BRAND + PRINT + WEB</p>
 							</div>
-						</figcaption>
+						</figcaption> -->
                         </a>
 					</figure>
                   </div>
