made changes to images on home page and also bio, style color changes also done

--- a/projects.html
+++ b/projects.html
@@ -51,17 +51,17 @@
 
 
     <!-- Intro -->
-	<div id="inner-section">
+	<!-- <div id="inner-section">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 pull-right wow fadeInUp animated">
 						<h1 class="inner-heading"><span>UK based Artist,Illustrator & Poet</span> Naureen Hafeez
                          </h1>
-						<!-- <div class="text-inner">OUR PROJECTS</div> -->
+
 					</div>
 				</div>
 			</div>
-	</div>
+	</div> -->
     <!-- /Intro -->
 
 
@@ -116,20 +116,7 @@
 							</div>
 						</figcaption> -->
                         </a>
-					</figure>
-                  </div>
-                 <div class="thumbs">
-                     <figure class="effect-julia">
-                       <a href="images/nooriimage4.jpg">
-						<img src="images/nooriimage4.jpg" alt="img21"/>
-						<!-- <figcaption>
-							<div>
-								<p>SIMPLE </p>
-								<p>BRAND + WEB</p>
-							</div>
-						</figcaption> -->
-                        </a>
-					</figure>
+
                   </div>
                   <div class="thumbs">
                      <figure class="effect-julia">
@@ -142,6 +129,20 @@
 							</div>
 						</figcaption> -->
                         </a>
+											</figure>
+															</div>
+														 <div class="thumbs">
+																 <figure class="effect-julia">
+																	 <a href="images/nooriimage4.jpg">
+												<img src="images/nooriimage4.jpg" alt="img21"/>
+												<!-- <figcaption>
+													<div>
+														<p>SIMPLE </p>
+														<p>BRAND + WEB</p>
+													</div>
+												</figcaption> -->
+																		</a>
+											</figure>
 					</figure>
                   </div>
 
@@ -186,56 +187,71 @@
                   </div>
                   <div class="thumbs">
                       <figure class="effect-julia">
-                       <a href="images/photo7.jpg">
-						<img src="images/photo7.jpg" alt="img21"/>
-						<figcaption>
-							<div>
-								<p>HELLO SIMPLE </p>
-								<p>BRAND + PRINT + WEB</p>
-							</div>
-						</figcaption>
+                       <a href="images/nooriimage9.jpg">
+						<img src="images/nooriimage9.jpg" alt="img21"/>
                         </a>
-					</figure>
-                  </div>
-                   <div class="thumbs">
-                    <figure class="effect-julia">
-                       <a href="images/photo1.gif">
-						<img src="images/photo1.gif" alt="img21"/>
-						<figcaption>
-							<div>
-								<p>SIMPLES</p>
-								<p>BRAND + PRINT + WEB</p>
-							</div>
-						</figcaption>
-                        </a>
+
 					</figure>
                   </div>
                   <div class="thumbs">
                     <figure class="effect-julia">
-                       <a href="images/image8.jpg">
-						<img src="images/image8.jpg" alt="img21"/>
-						<figcaption>
-							<div>
-								<p>SIMPLES</p>
-								<p>BRAND + PRINT + WEB</p>
-							</div>
-						</figcaption>
+                       <a href="images/nooriimage11.jpg">
+						<img src="images/nooriimage11.jpg" alt="img21"/>
                         </a>
-					</figure>
-                  </div>
-                  <div class="thumbs">
-                  <div class="block-project">
-                    <figure class="effect-julia">
-                       <a href="images/photo2.gif">
-						<img src="images/photo2.gif" alt="img21"/>
-						<figcaption>
-							<div>
-								<p>SIMPLES</p>
-								<p>BRAND + PRINT + WEB</p>
+
+
+				</figure>
+								</div>
+								<div class="thumbs">
+								<div class="block-project">
+									<figure class="effect-julia">
+										 <a href="images/nooriimage13.jpg">
+					<img src="images/nooriimage13.jpg" alt="img21"/>
+											</a>
+				</figure>
+
+			</figure>
 							</div>
-						</figcaption>
-                        </a>
-					</figure>
+							<div class="thumbs">
+							<div class="block-project">
+								<figure class="effect-julia">
+									 <a href="images/nooriimage16.jpg">
+				<img src="images/nooriimage16.jpg" alt="img21"/>
+										</a>
+			</figure>
+
+
+
+	</figure>
+					</div>
+					<div class="thumbs">
+					<div class="block-project">
+						<figure class="effect-julia">
+							 <a href="images/nooriimage18.jpg">
+		<img src="images/nooriimage18.jpg" alt="img21"/>
+								</a>
+	</figure>
+
+<!--
+</figure>
+				</div>
+				<div class="thumbs">
+				<div class="block-project">
+					<figure class="effect-julia">
+						 <a href="images/nooriimage18.jpg">
+	<img src="images/nooriimage18.jpg" alt="img21"/>
+							</a>
+</figure>
+
+</figure>
+				</div>
+				<div class="thumbs">
+				<div class="block-project">
+					<figure class="effect-julia">
+						 <a href="images/nooriimage19.jpg">
+	<img src="images/nooriimage19.jpg" alt="img21"/>
+							</a>
+</figure> -->
                     </div>
                   </div>
 
