--- a/studio.html
+++ b/studio.html
@@ -49,17 +49,7 @@
 
 
     <!-- Intro -->
-	<div id="inner-section">
-			<!-- <div class="container">
-				<div class="row">
-					<div class="col-md-8 pull-right wow fadeInUp animated">
-						<h1 class="inner-heading"><span>Design is a plan for arranging elements</span> in such a way as best to accomplish a particular                         purpose.</h1>
-						<div class="text-inner wow fadeInUp animated">OUR STORY</div> -->
 
-					</div>
-				</div>
-			</div>
-	</div>
     <!-- /Intro -->
 
 
@@ -93,19 +83,9 @@
             <p class="text-studio text-bold"> Naureen Khawaja Hafeez is a Bradford based illustrator and digital artist who designs work for publishing, film, theatre and online platforms.
             </p>
 
-						<p class="text-studio"> Her work is inspired by her Pakistani culture and illuminates intricate detail, vivid colours and layers.</p>
+						<p class="text-studio"> Naureens work has whimsical and vibrant qualities and her images create almost fairy tale like stories. Her work is inspired by her Pakistani culture and illuminates intricate detail, vivid colours and layers.</p>
 
-						<p class="text-studio">In 2018, she began working with the National Science and Media Museum to create work for their website and a variety of exhibitions exploring identity and the artistic process.</p>
-
- 						<p class="text-studio"> Naureen designed the first cover for Pennycress Magazine (https://pennycress.bigcartel.com/). Issue #1 ‘So, where are you from?’ championed creatives of colour in the North of England. She has also designed Issue #2 ‘What would aunty do’ discussing creatives of colour exploring cultural tradition and family legacy in the North of England.</p>
-
-						<p class="text-studio">In 2019, she was commissioned to create storyboards for ‘The Ancestors', a short film by Zodwa Nyoni about Zimbabwean rituals and belonging. It’s produced by BBC Films, BFI Film Hub North and Redbag Pictures. </p>
-
-						<p class="text-studio">The same year, she created five different postcards to accompany Afshan D'souza-
-						Lodhi's debut poetry collection [re: desire]. The collection explores the yearning to love, be loved and belong from a desi (South Asian) perspective. Naureen's work expanded on the imagery of how to eat a mango properly.</p>
-
-						<p class="text-studio">As well as working as a creative, Naureen holds a Degree in Creative Writing and is qualified in advanced SEN and classroom behaviour management. Her work in
-						primary and high schools supporting children with a variety of special needs has	taught her the important to finding resources that are accessible and celebrate	neurodiversity.</p>
+						<p class="text-studio"> Naureen's clients include The National Media Museum, PennyCress Magazine, Afshan D'Souza-Lodhi, Zodwa Nyoni, amongst many others.</p>
 
 						<p class="text-studio">Naureen is currently working on a graphic novel set in ancient India.</p>
 
@@ -198,51 +178,6 @@
            </div>
      </div> -->
 
-      <!-- Studio -->
-     <div class="container studio-margin">
-        <div class="row">
-          <div class="col-md-5 col-sm-5 studio-margin wow fadeInUp animated">
-            <h2 class="studio-heading">WHO WE WORK WITH
-            <span>happy clients</span>
-            </h2>
-          </div>
-          <div class="col-md-3 col-sm-3 studio-margin">
-            <div class="text-studio">
-            <ul class="list-group">
-            <li>Nationl Media Museum</li>
-            <li>Afshah Mango Shop </li>
-             <li>Some something gallery City</li>
-            <li>Book publishing company</li>
-            <li>Zodwa something </li>
-            <li>PennyCress Magazine</li>
-            </ul>
-            </div>
-          </div>
-           <div class="col-md-2 col-sm-2 studio-margin">
-            <div class="text-studio">
-            <ul class="list-group">
-            <li>Agency Simple</li>
-             <li>Nord Centric</li>
-            <li>Hello</li>
-            <li>Photoshoot</li>
-            <li>MSD Agency</li>
-            </ul>
-            </div>
-          </div>
-           <div class="col-md-2 col-sm-2 studio-margin">
-            <div class="text-studio">
-            <ul class="list-group">
-            <li>Poetic</li>
-             <li>ZZZ</li>
-            <li>Star Trek</li>
-            <li>All the Way</li>
-            <li>YES!</li>
-            </ul>
-            </div>
-          </div>
-       </div>
-     </div>
-     <!-- /Studio -->
 
     <!-- Team text-->
 	<div class="inner-team">
@@ -251,6 +186,18 @@
 					<div class="col-md-8 pull-right wow fadeInUp animated">
 						<h1 class="inner-heading-team"><span>"The beauty of Naureen's work is in the process.</span> From discussing an idea to delivering an illustration she pays attention to detail and respects, in my case the cultural specificity of the project. She did the research and  created a story board that encapsulated the Ndebele culture and whimsical feel of the film"</h1>
 						<div class="text-inner-team">Zodwa Nyoni - Playright and Creator of Ancestors</div>
+
+					</div>
+				</div>
+			</div>
+	</div>
+
+	<div class="inner-team">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-8 pull-right wow fadeInUp animated">
+						<h1 class="inner-heading-team"><span>"Working with Nori was an absolute dream.</span>  From concept all the way down to the finished product Nori was great at communicating and sharing drafts. She took on edits and suggestions and came up with a fantastic series of images for my book launch. She provided me with high quality files that I could then make postcards with. The postcards are incredibly popular. Would highly recommend working with her!"</h1>
+						<div class="text-inner-team">Afshan D'souza-Lodhi - Poet</div>
 
 					</div>
 				</div>
