updated the commissions project website and adjusted logo size

--- a/studio.html
+++ b/studio.html
@@ -22,7 +22,7 @@
                 <div class="container">
                     <div class="navbar-header pull-left">
                         <a href="" class="navbar-brand">
-                            <span class="brand-logo"><img src="images/noorilogo.png" alt=""/></span>
+                            <span class="brand-logo"><img src="images/noorilogo1.png" alt=""/></span>
                         </a>
                     </div>
                     <div class="main-nav pull-right">
@@ -249,6 +249,7 @@
 								<!-- <p>Phone: 212-333-4000</p> -->
 								<p>Email: <a href="mailto:noorihafiz@hotmail.co.uk">noorihafiz@hotmail.co.uk</a></p>
 								<p>Copyright Naureen Hafeez</p>
+								<p ><a href="https://www.instagram.com/nori.arty/" target='_blank'><img src="images/instagram-icon.png" alt=""/></a></p>
               </div><!-- /col-sm-9 -->
             </div><!--/row-->
           </div><!-- /col-sm-6 -->
@@ -257,7 +258,7 @@
               <div class="col-sm-9">
               <!-- <h3>Copyright 2017</h3>
               <p class="pull-right"><a href=""><img src="images/twitter.png" alt=""/></a></p> -->
-              <p class="pull-right icons-f"><a href="https://www.instagram.com/nori.arty/" target='_blank'><img src="images/instagram-icon.png" alt=""/></a></p>
+
               </div><!-- /col-sm-9 -->
             </div><!--/row-->
           </div><!-- /col-sm-3 -->
