--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
                 <div class="container">
                     <div class="navbar-header pull-left">
                         <a href="" class="navbar-brand">
-                            <span class="brand-logo"><img src="images/noorilogo.png" alt=""/></span>
+                            <span class="brand-logo"><img src="images/noorilogo1.png" alt=""/></span>
                         </a>
                     </div>
                     <div class="main-nav pull-right">
@@ -297,6 +297,7 @@
                 <!-- <p>Phone: 212-333-4000</p> -->
                 <p>Email: <a href="mailto:noorihafiz@hotmail.co.uk">noorihafiz@hotmail.co.uk</a></p>
 								<p>Copyright Naureen Hafeez</p>
+								  <p><a href="https://www.instagram.com/nori.arty/" target='_blank'><img src="images/instagram-icon.png" alt=""/></a></p>
 								<!-- <p class="pull-right icons-f"><a href="https://www.instagram.com/nori.arty/" target='_blank'><img src="images/instagram-icon.png" alt=""/></a></p> -->
               </div><!-- /col-sm-9 -->
             </div><!--/row-->
@@ -306,7 +307,7 @@
               <div class="col-sm-9">
               <!-- <h3>Copyright Naureen Hafeez</h3> -->
               <!-- <p class="pull-right"><a href=""><img src="images/twitter.png" alt=""/></a></p> -->
-              <p class="pull-right icons-f"><a href="https://www.instagram.com/nori.arty/" target='_blank'><img src="images/instagram-icon.png" alt=""/></a></p>
+
               </div><!-- /col-sm-9 -->
             </div><!--/row-->
           </div><!-- /col-sm-3 -->
