--- a/about.html
+++ b/about.html
@@ -36,10 +36,8 @@
                         <nav class="overlay-menu">
                             <ul>
                                 <li><a href="index.html">Home</a></li>
-                                <li><a href="studio.html">Studio</a></li>
-                                <li><a href="projects.html">Projects</a></li>
-                                <li><a href="project-description.html">Project description</a></li>
-                                <li><a href="contact.html">Contact us</a></li>
+                                <li><a href="about.html">About</a></li>
+                                <li><a href="commissions.html">Commissions</a></li>  
                             </ul>
                         </nav>
                     </div>
