--- a/commissions.html
+++ b/commissions.html
@@ -36,13 +36,11 @@
                     </div>
                     <div class="overlay" id="overlay">
                         <nav class="overlay-menu">
-                            <ul>
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="studio.html">Studio</a></li>
-                                <li><a href="projects.html">Projects</a></li>
-                                <li><a href="project-description.html">Project description</a></li>
-                                <li><a href="contact.html">Contact us</a></li>
-                            </ul>
+													<ul>
+															<li><a href="index.html">Home</a></li>
+															<li><a href="about.html">About</a></li>
+															<li><a href="commissions.html">Commissions</a></li>
+													</ul>
                         </nav>
                     </div>
                 </div><!-- /container -->
@@ -75,15 +73,15 @@
      <!-- /Project-desc Banner -->
 
 
-     <div class="container">
+     <!-- <div class="container">
            <div class="row">
              <div class="line-symbol"></div>
            </div>
-     </div>
+     </div> -->
 
 
      <!-- Project description -->
-     <div class="container">
+     <!-- <div class="container">
         <div class="row">
           <div class="col-md-5 col-sm-5 studio-margin wow fadeInUp animated">
             <h2 class="projectd-heading">THE PROBLEM
@@ -98,7 +96,7 @@
 </p>
           </div>
         </div>
-     </div>
+     </div> -->
 
      <div class="container">
            <div class="row">
@@ -110,21 +108,27 @@
      <!-- Project description -->
      <div class="container">
         <div class="row">
-          <div class="col-md-5 col-sm-5 projectd-margin wow fadeInUp animated">
-            <h2 class="projectd-heading">THE SOLUTION
-            <span>what we did</span>
+          <!-- <div class="col-md-5 col-sm-5 projectd-margin wow fadeInUp animated">
+            <h2 class="projectd-heading">Commission Work
+            <! <span>what we did</span> -->
             </h2>
           </div>
-          <div class="col-md-7 col-sm-7 projectd-margin">
-            <p class="text-projectd">What's really important is to simplify. The work of most photographers would be improved immensely if they could do one thing: get rid of the extraneous. If you strive for simplicity, you are more likely to reach the viewer. What's really important is to simplify.
+          <!-- <div class="col-md-7 col-sm-7 projectd-margin">
+            <p class="text-projectd">My commission work done over the many years
 </p>
-          </div>
+          </div> -->
         </div>
      </div>
 
      <!-- Project images -->
      <div class="container">
            <div class="row">
+
+
+						 <h2 class="projectd-heading">Commission Work
+						 <!-- <span>what we did</span> -->
+						 </h2>
+
 
              <div class="line-symbol2"></div>
                 <div class="col-md-6 thumbs wow fadeInUp animated"><a href="images/p1commission1.jpg"><img src="images/p1commission1.jpg" class="image-project" alt=""/></a>
@@ -140,8 +144,10 @@
 
              <div class="line-symbol2"></div>
                 <div class="col-md-6">
-                 <p class="text-projectd1">What's really important is to simplify. The work of most photographers would be improved immensely if they could do one thing: get rid of the extraneous.
-</p>
+                 <!-- <p class="text-projectd1">What's really important is to simplify. The work of most photographers would be improved immensely if they could do one thing: get rid of the extraneous.
+</p> -->
+
+
                 <div class="thumbs"><a href="images/p2commission2.jpg"><img src="images/p2commission2.jpg" class="image-project-a" alt=""/></a>
                 </div>
                 </div>
@@ -165,7 +171,16 @@
 
      <!-- /Testimonials text -->
 
+		 <div class="container">
+		 			<div class="row">
 
+		 				<div class="line-symbol2"></div>
+		 					 <div class="col-md-6 thumbs wow fadeInUp animated"> <a href="images/p4commission1.jpg"><img src="images/p4commission1.jpg" class="image-project" alt=""/></a></div>
+		 					 <div class="col-md-6 thumbs image-project1"><a href="images/p4commission2.png"><img src="images/p4commission2.png" alt=""/></a></div>
+		 			</div>
+		 </div>
+
+		 <div class="projectd-padding"></div>
 
      <!-- Footer-->
 		 <footer>
